--- a/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerDetailView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerDetailView.xaml
@@ -1,4 +1,4 @@
-﻿<mb:DemoModule x:Class="DevExpress.VideoRent.Wpf.CustomerDetailView"
+﻿<mb:DemoModule
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,6 +9,7 @@
     xmlns:helpers="clr-namespace:DevExpress.VideoRent.Wpf.Helpers"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:mb="clr-namespace:DevExpress.VideoRent.Wpf.ModulesBase"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" x:Class="DevExpress.VideoRent.Wpf.CustomerDetailView"
     ShowMethodType="{DynamicResource ShowType}">
 
     <mb:DemoModule.Resources>
@@ -23,14 +24,14 @@
         </ResourceDictionary>
     </mb:DemoModule.Resources>
     <helpers:DataBindingsHelper.Bindings>
-        <helpers:BindingsInfoCollection DataContext="{Binding Source={StaticResource DataSource}, Path=DataObject}">
+        <helpers:BindingsInfoCollection DataContext="{Binding DataObject, Source={StaticResource DataSource}}">
             <helpers:BindingInfo ElementName="resource:ShowType" Property="{x:Static mb:ShowType.CloseSignalSlotProperty}" Value="{Binding DisposeSignal}" />
             <helpers:BindingInfo ElementName="resource:ShowType" Property="{x:Static mb:ClassicShowType.SelectSignalSlotProperty}" Value="{Binding FocusSignal}" />
             <helpers:BindingInfo ElementName="resource:ShowType" Property="{x:Static mb:ClassicShowType.CategoryProperty}" Value="{Binding Tag}" />
             <helpers:BindingInfo ElementName="BbiHome" Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding View.SelectCategoryCommand}" />
             <helpers:BindingInfo ElementName="BbiHome" Property="{x:Static dxb:BarItem.ContentProperty}" Value="{Binding Tag, Converter={StaticResource CategoryToItemContentConverter}}" />
-            <helpers:BindingInfo ElementName="BbiLoadPicture" Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding Path=CustomerEdit.View.Content.(helpers:ImageEditHelper.ImageEdit).LoadCommand}" />
-            <helpers:BindingInfo ElementName="BbiClearPicture"  Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding Path=CustomerEdit.View.Content.(helpers:ImageEditHelper.ImageEdit).ClearCommand}" />
+            <helpers:BindingInfo ElementName="BbiLoadPicture" Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding CustomerEdit.View.Content.(helpers:ImageEditHelper.ImageEdit).LoadCommand}" />
+            <helpers:BindingInfo ElementName="BbiClearPicture"  Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding CustomerEdit.View.Content.(helpers:ImageEditHelper.ImageEdit).ClearCommand}" />
             <helpers:BindingInfo ElementName="BbiSetAsCurrentCustomer" Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding CommandSetAsCurrentCustomer}" />
             <helpers:BindingInfo ElementName="BbiSetAsCurrentCustomer" Property="{x:Static ContentElement.IsEnabledProperty}" Value="{Binding AllowSetAsCurrentCustomer}" />
             <helpers:BindingInfo ElementName="BbiSave" Property="{x:Static helpers:CustomEventCommandHelper.ItemClickProperty}" Value="{Binding CommandSave}" />
