--- a/DevExpress.VideoRent.Wpf/CustomersList/CustomersListView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomersList/CustomersListView.xaml
@@ -1,4 +1,4 @@
-﻿<mb:DemoModule x:Class="DevExpress.VideoRent.Wpf.CustomersListView"
+﻿<mb:DemoModule xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"  x:Class="DevExpress.VideoRent.Wpf.CustomersListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
@@ -90,6 +90,17 @@
                 </dxr:RibbonDefaultPageCategory>
             </dxr:RibbonControl>
         </dxb:BarManager>
-        <ContentControl Grid.Row="1" x:Name="CustomersEditViewPresenter" Style="{StaticResource ModulePresenter}" />
+
+        <dxdo:DockLayoutManager  Grid.Row="1">
+            <dxdo:LayoutGroup  Orientation="Vertical" Background="Transparent">
+                <dxdo:LayoutPanel ShowCaption="False" ShowBorder="False" Caption="{helpers:ConstString ID=Companies}" Background="Transparent">
+                    <ContentControl x:Name="CustomersEditViewPresenter" Style="{StaticResource ModulePresenter}" />
+                </dxdo:LayoutPanel>
+                <dxdo:LayoutPanel x:Name="CustomerStatsPanel" ItemHeight="*" AllowClose="False" ShowCloseButton="False" Background="Transparent">
+                  <local:CustomerStatsView x:Name="CustomerStatsViewPresenter"/>
+                </dxdo:LayoutPanel>
+            </dxdo:LayoutGroup>
+        </dxdo:DockLayoutManager> 
+        
     </Grid>
 </mb:DemoModule>
