Extented Customers to contain info about registration

--- a/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerEditView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerEditView.xaml
@@ -41,8 +41,10 @@
             <helpers:BindingInfo ElementName="EmailEdit" Property="{x:Static helpers:CommandHelper.Command0Property}" Value="{Binding CommandSendEmail}"/>
             <helpers:BindingInfo ElementName="DiscountLevelEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.DiscountLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="DiscountLevelEdit" Property="{x:Static dxe:LookUpEditBase.ItemsSourceProperty}" Value="{Binding DiscountLevelEditData.List}" />
-            <helpers:BindingInfo ElementName="MembershipTypeEdit" Property="{x:Static dxe:LookUpEditBase.ItemsSourceProperty}" Value="{Binding MembershipTypeEditData.List}" />
             <helpers:BindingInfo ElementName="DiscountEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.Discount, Mode=OneWay}" />
+            <helpers:BindingInfo ElementName="MembershipTypeEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.MembershipType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <helpers:BindingInfo ElementName="MembershipTypeEdit" Property="{x:Static dxe:LookUpEditBase.ItemsSourceProperty}" Value="{Binding MembershipTypeEditData.List}" />
+            <helpers:BindingInfo ElementName="MembershipStartDateEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.MembershipStartDate, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="CommentsEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.Comments, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:ValidationInfo EditName0="FirstNameEdit" Rule="{StaticResource ValidationRuleIsNotBlank}" />
             <helpers:ValidationInfo EditName0="LastNameEdit" Rule="{StaticResource ValidationRuleIsNotBlank}" />
@@ -97,10 +99,10 @@
                     </dxlc:LayoutGroup>
                     <dxlc:LayoutGroup Header="{helpers:ConstString ID=Membership}" Orientation="Vertical">
                     <dxlc:LayoutItem Label="{helpers:ConstString ID=MembershipTypeLabel}" VerticalAlignment="Top">
-                        <dxe:ComboBoxEdit x:Name="MembershipTypeEdit" Style="{StaticResource CustomerMembershipTypeComboBoxEdit}" IsReadOnly="True" IsEnabled="False" />
+                        <dxe:ComboBoxEdit x:Name="MembershipTypeEdit" Style="{StaticResource CustomerMembershipTypeComboBoxEdit}" IsReadOnly="False" IsEnabled="True" />
                     </dxlc:LayoutItem>
                     <dxlc:LayoutItem Label="{helpers:ConstString ID=StartDateLabel}">
-                        <dxe:DateEdit x:Name="StartDateEdit" />
+                            <dxe:DateEdit x:Name="MembershipStartDateEdit" />
                     </dxlc:LayoutItem>
                     </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
